--- a/style.css
+++ b/style.css
@@ -2,5 +2,5 @@ h1{
     align-items: center; font-weight: 900;color: #ff0000;
 }
 p{
-    align-items: center; font-size: xx-small;color: #585858;
+    align-items: center; font-size: xx-small; opacity:50%;
 }
